--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practicum Library</title>
-    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
@@ -42,16 +41,13 @@
           your development knowledge, or just use this lovely spot to work or
           study. This is a cool place for cool students!
         </p>
-        <!-- ----------------------------------------------------------------- -->
-        <!--               Don't uncomment until project stage 2               -->
-        <!-- ----------------------------------------------------------------- -->
         <img
           src="./images/inside_the_library.png"
           alt="Illustration 'Inside the library'"
           class="header__image"
         />
         <div class="header__footer">
-          <a class="header__link">About the library &darr;</a>
+          <a href="#about" class="header__link">About the library &darr;</a>
           <p class="header__address">
             200 Success Avenue, The Town of Practicum
           </p>
@@ -59,10 +55,71 @@
       </header>
 
       <main class="content">
-        <section class="events" id="events">
-          <!-- --------------------------------------------------------------- -->
-          <!--              Don't uncomment until project stage 2              -->
-          <!-- --------------------------------------------------------------- -->
+        <section id="staff" class="staff">
+          <h2 class="staff__title">Reader picks</h2>
+          <p class="staff__subtitle">That our readers love</p>
+          <ul class="staff__cards">
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">Gates of Fire</h3>
+                <p class="card__text">
+                  Gates of Fire is a 1998 historical fiction novel by Steven
+                  Pressfield that recounts the Battle of Thermopylae through
+                  Xeones, a perioikos born in Astakos, and one of only three
+                  Greek survivors of the battle. Gates of Fire was on the
+                  Commandant of the Marine Corps' Reading list.
+                </p>
+                <p class="card__footer">Steven Pressfield</p>
+              </div>
+            </li>
+
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">Starship Troopers</h3>
+                <p class="card__text">
+                  Starship Troopers is a military science fiction novel by
+                  American writer Robert A. Heinlein. Written in a few weeks in
+                  reaction to the US suspending nuclear tests, the story was
+                  first published as a two-part serial in The Magazine of
+                  Fantasy & Science Fiction as Starship Soldier, and published
+                  as a book by G. P.
+                </p>
+                <p class="card__footer">Robert A. Heinlein</p>
+              </div>
+            </li>
+
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">Musashi</h3>
+                <p class="card__text">
+                  Musashi is a Japanese epic novel written by Eiji Yoshikawa,
+                  about the life and deeds of legendary Japanese swordsman
+                  Miyamoto Musashi. The book follows Shinmen Takezō starting
+                  after the Battle of Sekigahara. It follows his life after the
+                  monk Takuan forces him to reinvent himself as Miyamoto
+                  Musashi.
+                </p>
+                <p class="card__footer">Eiji Yoshikawa</p>
+              </div>
+            </li>
+
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">Swallowing Stones</h3>
+                <p class="card__text">
+                  Michael fires his new rifle into the air on July Fourth, never
+                  imagining that his bullet will end up killing a man named
+                  Charlie Ward. So begins this taut drama of Michael MacKenzie
+                  and of Charlie Ward's daughter, Jenna, as the two teenagers
+                  react to the tragedy.
+                </p>
+                <p class="card__footer">Joyce McDonald</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+
+        <section id="events" class="events">
           <div class="events__content">
             <h2 class="events__heading">Upcoming events:</h2>
             <h3 class="events__title">
@@ -91,143 +148,58 @@
               prove that this hasn't been the case since at least the 18th
               century.
             </p>
-            <a href="#" class="events__more">More events &rarr;</a>
+            <a href="#" class="events__more">More events</a>
           </div>
-          <!-- Start creating the composition here -->
           <div class="events__cover">
             <img
               class="events__image"
-              src="/images/cafe.png"
-              alt="image of a cafe"
+              src="./images/cafe.png"
+              alt="cafe image"
             />
-
             <div class="person person_name_feynman">
               <p class="person__caption">Joan Feynman</p>
               <img
                 class="person__image person__image_size_l"
-                src="/images/person_feynman.png"
-                alt="image of Feynman"
+                src="./images/person_feynman.png"
+                alt="Joan Feynman"
               />
             </div>
-
             <div class="person person_name_burbidge">
               <p class="person__caption">Margaret Burbidge</p>
               <img
                 class="person__image person__image_size_m"
-                src="/images/person_burbidge.png"
-                alt="image of burbidge"
+                src="./images/person_burbidge.png"
+                alt="Margaret Burbidge"
               />
             </div>
-
             <div class="person person_name_cannon">
               <img
                 class="person__image person__image_size_m"
-                src="/images/person_cannon.png"
-                alt="image of cannon"
+                src="./images/person_cannon.png"
+                alt="Annie Jump Cannon"
               />
               <p class="person__caption">Annie Jump Cannon</p>
             </div>
             <div class="person person_name_mitchell">
               <img
                 class="person__image person__image_size_s"
-                src="/images/person_mitchell.png"
-                alt="image of mitchell"
+                src="./images/person_mitchell.png"
+                alt="Maria Mitchell"
               />
               <p class="person__caption">Maria Mitchell</p>
             </div>
-
             <div class="person person_name_tarter">
               <p class="person__caption">Jill Tarter</p>
               <img
                 class="person__image person__image_size_m"
-                src="/images/person_tarter.png"
-                alt="image of mitchell"
+                src="./images/person_tarter.png"
+                alt="Jill Tarter"
               />
             </div>
           </div>
         </section>
 
-        <section class="staff" id="staff">
-          <!-- --------------------------------------------------------------- -->
-          <!--        Don't uncomment until the final project stage            -->
-          <!-- --------------------------------------------------------------- -->
-          <h2 class="staff__title">Staff picks</h2>
-          <p class="staff__subtitle">That our readers love</p>
-          <ul class="staff__cards">
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">Introduction to Algorithms</h3>
-                <p class="card__text">
-                  The name of this book is self-explanatory; it's a proper
-                  introduction to algorithms! Introduction to Algorithms, or
-                  CLRS, in reference to the authors' last names, goes in-depth
-                  and covers a range of algorithms across several self-contained
-                  chapters.
-                </p>
-                <p class="card__footer">
-                  Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest,
-                  Clifford Stein
-                </p>
-              </div>
-            </li>
-
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">
-                  The Structure and Interpretation of Computer Programs (SICP)
-                </h3>
-                <p class="card__text">
-                  This is one of the best books for learning the fundamentals of
-                  programming. Featured by MIT in one of their foundational
-                  programming courses, SICP is a general-purpose programming
-                  book that uses Scheme to illustrate various programming
-                  concepts.
-                </p>
-                <p class="card__footer">
-                  Harold Abelson, Gerald Jay Sussman, Julie Sussman
-                </p>
-              </div>
-            </li>
-
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">
-                  The Clean Coder: A Code of Conduct for Professional
-                  Programmers
-                </h3>
-                <p class="card__text">
-                  Compiled by seasoned software engineer and author Robert C.
-                  Martin (also known as Uncle Bob), this book covers the
-                  techniques and tools of true software craftsmanship. It
-                  explains how to write clean code and demonstrates how to
-                  cultivate the attitude of a skilled, professional programmer.
-                </p>
-                <p class="card__footer">Steve McConnell</p>
-              </div>
-            </li>
-
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">
-                  Code Complete: A Practical Handbook of Software Construction
-                </h3>
-                <p class="card__text">
-                  Want to know how to write robust code irrespective of the
-                  architecture behind your chosen programming language? Then
-                  consider reading Code Complete: A Practical Handbook of
-                  Software Construction. It comprehensively covers everything
-                  related to good code structure.
-                </p>
-                <p class="card__footer">Steve McConnell</p>
-              </div>
-            </li>
-          </ul>
-        </section>
-
-        <section class="membership" id="member">
-          <!-- --------------------------------------------------------------- -->
-          <!--         Don't uncomment until the final project stage           -->
-          <!-- --------------------------------------------------------------- -->
+        <section id="member" class="membership">
           <h2 class="membership__title">Becoming a library member is easy!</h2>
           <ul class="membership__steps">
             <li class="step">
@@ -283,10 +255,7 @@
           </ul>
         </section>
 
-        <section class="about" id="about">
-          <!-- --------------------------------------------------------------- -->
-          <!--          Don't uncomment until the final project stage          -->
-          <!-- --------------------------------------------------------------- -->
+        <section id="about" class="about">
           <h2 class="about__title">About the library</h2>
           <div class="about__content">
             <p class="about__paragraph">
@@ -310,9 +279,6 @@
           <div class="about__circle"></div>
         </section>
       </main>
-      <!-- ----------------------------------------------------------------- -->
-      <!--          Don't uncomment until the final project stage            -->
-      <!-- ----------------------------------------------------------------- -->
       <footer id="contact" class="footer">
         <div class="footer__columns">
           <div class="footer__column">
@@ -335,29 +301,27 @@
             <h4 class="footer__column-heading">Social Media</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <a class="footer__column-link" href="#">
-                  <img
+                <a class="footer__column-link" href="#"
+                  ><img
                     class="footer__social-icon"
                     src="./images/facebook_white.svg"
                     alt="facebook icon"
-                  />
-                  Facebook</a
+                  />Facebook</a
                 >
               </li>
               <li class="footer__list-item">
-                <a class="footer__column-link" href="#">
-                  <img
+                <a class="footer__column-link" href="#"
+                  ><img
                     class="footer__social-icon"
                     src="./images/instagram_white.svg"
                     alt="instagram icon"
-                  />
-                  Instagram</a
+                  />Instagram</a
                 >
               </li>
             </ul>
           </div>
         </div>
-        <p class="footer__copyright">Copyright 2022 Bryan Delgado</p>
+        <p class="footer__copyright">Bryan Delgado</p>
       </footer>
     </div>
   </body>
