New section order

--- a/index.html
+++ b/index.html
@@ -53,6 +53,81 @@
           </p>
         </div>
       </header>
+      <section id="events" class="events">
+        <div class="events__content">
+          <h2 class="events__heading">Upcoming events:</h2>
+          <h3 class="events__title">
+            In honor of Joan Feynman: Women in astrophysics
+          </h3>
+          <div class="event-info events__info-section">
+            <div class="event-info__item">
+              <div
+                class="event-info__icon event-info__icon_type_calendar"
+              ></div>
+              <p class="event-info__text">Mon, January 12</p>
+            </div>
+            <div class="event-info__item">
+              <div class="event-info__icon event-info__icon_type_pin"></div>
+              <p class="event-info__text">
+                Practicum Library Conference Hall & Online
+              </p>
+            </div>
+          </div>
+          <p class="events__description">
+            At this event, which celebrates the library's namesake, our guest
+            lecturer will take us on a journey exploring some of the most
+            prominent female researchers in the world of space science. It's
+            easy to buy into the misconception that this field was mostly
+            dominated by men, but our lecture aims to change that notion and
+            prove that this hasn't been the case since at least the 18th
+            century.
+          </p>
+          <a href="#" class="events__more">More events</a>
+        </div>
+        <div class="events__cover">
+          <img class="events__image" src="./images/cafe.png" alt="cafe image" />
+          <div class="person person_name_feynman">
+            <p class="person__caption">Joan Feynman</p>
+            <img
+              class="person__image person__image_size_l"
+              src="./images/person_feynman.png"
+              alt="Joan Feynman"
+            />
+          </div>
+          <div class="person person_name_burbidge">
+            <p class="person__caption">Margaret Burbidge</p>
+            <img
+              class="person__image person__image_size_m"
+              src="./images/person_burbidge.png"
+              alt="Margaret Burbidge"
+            />
+          </div>
+          <div class="person person_name_cannon">
+            <img
+              class="person__image person__image_size_m"
+              src="./images/person_cannon.png"
+              alt="Annie Jump Cannon"
+            />
+            <p class="person__caption">Annie Jump Cannon</p>
+          </div>
+          <div class="person person_name_mitchell">
+            <img
+              class="person__image person__image_size_s"
+              src="./images/person_mitchell.png"
+              alt="Maria Mitchell"
+            />
+            <p class="person__caption">Maria Mitchell</p>
+          </div>
+          <div class="person person_name_tarter">
+            <p class="person__caption">Jill Tarter</p>
+            <img
+              class="person__image person__image_size_m"
+              src="./images/person_tarter.png"
+              alt="Jill Tarter"
+            />
+          </div>
+        </div>
+      </section>
 
       <main class="content">
         <section id="staff" class="staff">
@@ -117,86 +192,6 @@
               </div>
             </li>
           </ul>
-        </section>
-
-        <section id="events" class="events">
-          <div class="events__content">
-            <h2 class="events__heading">Upcoming events:</h2>
-            <h3 class="events__title">
-              In honor of Joan Feynman: Women in astrophysics
-            </h3>
-            <div class="event-info events__info-section">
-              <div class="event-info__item">
-                <div
-                  class="event-info__icon event-info__icon_type_calendar"
-                ></div>
-                <p class="event-info__text">Mon, January 12</p>
-              </div>
-              <div class="event-info__item">
-                <div class="event-info__icon event-info__icon_type_pin"></div>
-                <p class="event-info__text">
-                  Practicum Library Conference Hall & Online
-                </p>
-              </div>
-            </div>
-            <p class="events__description">
-              At this event, which celebrates the library's namesake, our guest
-              lecturer will take us on a journey exploring some of the most
-              prominent female researchers in the world of space science. It's
-              easy to buy into the misconception that this field was mostly
-              dominated by men, but our lecture aims to change that notion and
-              prove that this hasn't been the case since at least the 18th
-              century.
-            </p>
-            <a href="#" class="events__more">More events</a>
-          </div>
-          <div class="events__cover">
-            <img
-              class="events__image"
-              src="./images/cafe.png"
-              alt="cafe image"
-            />
-            <div class="person person_name_feynman">
-              <p class="person__caption">Joan Feynman</p>
-              <img
-                class="person__image person__image_size_l"
-                src="./images/person_feynman.png"
-                alt="Joan Feynman"
-              />
-            </div>
-            <div class="person person_name_burbidge">
-              <p class="person__caption">Margaret Burbidge</p>
-              <img
-                class="person__image person__image_size_m"
-                src="./images/person_burbidge.png"
-                alt="Margaret Burbidge"
-              />
-            </div>
-            <div class="person person_name_cannon">
-              <img
-                class="person__image person__image_size_m"
-                src="./images/person_cannon.png"
-                alt="Annie Jump Cannon"
-              />
-              <p class="person__caption">Annie Jump Cannon</p>
-            </div>
-            <div class="person person_name_mitchell">
-              <img
-                class="person__image person__image_size_s"
-                src="./images/person_mitchell.png"
-                alt="Maria Mitchell"
-              />
-              <p class="person__caption">Maria Mitchell</p>
-            </div>
-            <div class="person person_name_tarter">
-              <p class="person__caption">Jill Tarter</p>
-              <img
-                class="person__image person__image_size_m"
-                src="./images/person_tarter.png"
-                alt="Jill Tarter"
-              />
-            </div>
-          </div>
         </section>
 
         <section id="member" class="membership">
@@ -321,7 +316,7 @@
             </ul>
           </div>
         </div>
-        <p class="footer__copyright">Bryan Delgado</p>
+        <p class="footer__copyright">Copyright 2022 Bryan Delgado</p>
       </footer>
     </div>
   </body>
